welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: illegal start of simple pattern
for (case <-1 to 6){
     ^Program:11: error: '<-' expected but '}' found.
}
^