welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
var vuBiscuit = false;
for (case <-1 to 6){
	if (estSurBiscuit()==true){
	return true
	recule()
	}
	else avance();
}
}
